--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.12.0",
     "body-parser": "^1.15.1",
+    "cheerio": "^0.20.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.20",
     "morgan": "^1.7.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "axios": "^0.12.0",
